--- a/AjaxControlToolkit.StaticResources/AjaxControlToolkit.StaticResources.csproj
+++ b/AjaxControlToolkit.StaticResources/AjaxControlToolkit.StaticResources.csproj
@@ -11,6 +11,29 @@
         <OutputPath Condition="$(TargetFramework) != 'net48'">$(GlobalOutputPath)$(TargetFramework)\</OutputPath>
         <SignAssembly>true</SignAssembly>
         <AssemblyOriginatorKeyFile>..\AjaxKey.snk</AssemblyOriginatorKeyFile>
+        <RestoreSources>$(RestoreSources);../../../nupkg;https://api.nuget.org/v3/index.json</RestoreSources>
+
+        <PackageId>EstrellasDeEsperanza.WebFormsForCore.AjaxControlToolkit.StaticResources</PackageId>
+        <Title>AjaxControlToolkit.StaticResources</Title>
+        <Authors>simonegli8</Authors>
+        <Company>Estrellas de Esperanza</Company>
+        <Product>AjaxControlToolkit.StaticResources</Product>
+        <Description>AjaxControlToolkit for WebFormsForCore</Description>
+        <Copyright>Estrellas de Esperanza</Copyright>
+        <PackageProjectUrl>https://github.com/simonegli8/WebFormsForCore</PackageProjectUrl>
+        <PackageReadmeFile>README.md</PackageReadmeFile>
+        <RepositoryUrl> https://github.com/simonegli8/WebFormsForCore</RepositoryUrl>
+        <RepositoryType>git</RepositoryType>
+        <PackageTags>WebForms;porting WebForms;NET Core;NET 8</PackageTags>
+        <AssemblyVersion>8.0.0.0</AssemblyVersion>
+        <FileVersion>8.0.0.0</FileVersion>
+        <PackageLicenseExpression>MIT</PackageLicenseExpression>
+        <IncludeSymbols>true</IncludeSymbols>
+        <PublishRepositoryUrl>true</PublishRepositoryUrl>
+        <EmbedUntrackedSources>true</EmbedUntrackedSources>
+        <SymbolPackageFormat>snupkg</SymbolPackageFormat>
+        <AllowedOutputExtensionsInPackageBuildOutputFolder>$(AllowedOutputExtensionsInPackageBuildOutputFolder);.pdb</AllowedOutputExtensionsInPackageBuildOutputFolder>
+
     </PropertyGroup>
     <ItemGroup Condition="$(TargetFramework) == 'net48'">
         <PackageReference Include="Microsoft.AspNet.Web.Optimization" Version="1.1.3" />
@@ -18,9 +41,12 @@
         <PackageReference Include="WebGrease" Version="1.6.0" />
     </ItemGroup>
     <ItemGroup Condition="$(TargetFramework) != 'net48'">
-        <PackageReference Include="EstrellasDeEsperanza.Web.Optimization" Version="1.1.2-beta" />
-        <PackageReference Include="EstrellasDeEsperanza.Web.Infrastructure" Version="1.1.2-beta" />
-        <PackageReference Include="EstrellasDeEsperanza.WebGrease" Version="1.1.2-beta" />
+        <!--<PackageReference Include="EstrellasDeEsperanza.WebFormsForCore.Web.Optimization" Version="1.1.2-beta" />
+        <PackageReference Include="EstrellasDeEsperanza.WebFormsForCore.Web.Infrastructure" Version="1.1.2-beta" />
+        <PackageReference Include="EstrellasDeEsperanza.WebFormsForCore.WebGrease" Version="1.1.2-beta" />-->
+        <ProjectReference Include="..\..\WebFormsForCore.Web.Optimization\WebFormsForCore.Web.Optimization.csproj" />
+        <ProjectReference Include="..\..\WebFormsForCore.Web.Infrastructure\WebFormsForCore.Web.Infrastructure.csproj" />
+        <ProjectReference Include="..\..\WebFormsForCore.WebGrease\WebFormsForCore.WebGrease.csproj" />
     </ItemGroup>
     <ItemGroup>
         <PackageReference Include="Antlr" Version="3.5.0.2" />
@@ -35,4 +61,12 @@
     <ItemGroup>
         <ProjectReference Include="..\AjaxControlToolkit\AjaxControlToolkit.csproj" />
     </ItemGroup>
+
+    <ItemGroup>
+        <None Include="..\..\..\README.md">
+            <Pack>True</Pack>
+            <PackagePath>\</PackagePath>
+        </None>
+    </ItemGroup>
+
 </Project>
