--- a/AjaxControlToolkit/AjaxControlToolkit.csproj
+++ b/AjaxControlToolkit/AjaxControlToolkit.csproj
@@ -38,8 +38,8 @@
         <RepositoryUrl>https://github.com/webformsforcore/WebFormsForCore.AjaxControlToolkit</RepositoryUrl>
         <RepositoryType>git</RepositoryType>
         <PackageTags>WebForms;porting WebForms;NET Core;NET 8</PackageTags>
-        <AssemblyVersion>8.0.0.0</AssemblyVersion>
-        <FileVersion>8.0.0.0</FileVersion>
+        <AssemblyVersion>8.0.9.0</AssemblyVersion>
+        <FileVersion>8.0.9.0</FileVersion>
         <PackageLicenseExpression>MIT</PackageLicenseExpression>
         <IncludeSymbols>true</IncludeSymbols>
         <PublishRepositoryUrl>true</PublishRepositoryUrl>
@@ -69,10 +69,10 @@
     </ItemGroup>
     <ItemGroup Condition="$(TargetFramework) != 'net48'">
         <!--<PackageReference Include="EstrellasDeEsperanza.WebFormsForCore.Web" Version="1.1.2-beta" />
-        <PackageReference Include="EstrellasDeEsperanza.WebFormsForCore.Web.Extensions" Version="1.1.2-beta" />
-        <PackageReference Include="EstrellasDeEsperanza.WebFormsForCore.Configuration" Version="1.1.2-beta" /6-->
+        <PackageReference Include="EstrellasDeEsperanza.WebFormsForCore.Web.Extensions" Version="1.1.2-beta" />-->
+        <PackageReference Include="EstrellasDeEsperanza.WebFormsForCore.Configuration" Version="1.2.9" />
         <PackageReference Include="System.Drawing.Common" Version="8.0.11" Aliases="Legacy" />
-        <ProjectReference Include="..\..\WebFormsForCore.Configuration\WebFormsForCore.Configuration.csproj" />
+        <!--<ProjectReference Include="..\..\WebFormsForCore.Configuration\WebFormsForCore.Configuration.csproj" />-->
         <ProjectReference Include="..\..\WebFormsForCore.Web.Extensions\WebFormsForCore.Web.Extensions.csproj" />
         <ProjectReference Include="..\..\WebFormsForCore.Web\WebFormsForCore.Web.csproj" />
     </ItemGroup>
