--- a/AjaxControlToolkit.StaticResources/AjaxControlToolkit.StaticResources.csproj
+++ b/AjaxControlToolkit.StaticResources/AjaxControlToolkit.StaticResources.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
         <ProjectGuid>{820694DF-C225-46B6-BA38-C5FEFBD79AEB}</ProjectGuid>
-        <TargetFramework>net48</TargetFramework>
+        <TargetFrameworks>net48;net10.0</TargetFrameworks>
         <WebGreaseLibPath>..\packages\WebGrease.1.5.2\lib</WebGreaseLibPath>
         <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
         <GlobalOutputPath>..\bin\$(Configuration)\</GlobalOutputPath>
@@ -25,8 +25,8 @@
         <RepositoryUrl>https://github.com/webformsforcore/WebFormsForCore.AjaxControlToolkit</RepositoryUrl>
         <RepositoryType>git</RepositoryType>
         <PackageTags>WebForms;porting WebForms;NET Core;NET 8</PackageTags>
-        <AssemblyVersion>8.0.13.0</AssemblyVersion>
-        <FileVersion>8.0.13.0</FileVersion>
+        <AssemblyVersion>10.0.13.0</AssemblyVersion>
+        <FileVersion>10.0.13.0</FileVersion>
         <PackageLicenseExpression>MIT</PackageLicenseExpression>
         <IncludeSymbols>true</IncludeSymbols>
         <PublishRepositoryUrl>true</PublishRepositoryUrl>
@@ -49,7 +49,7 @@
     </ItemGroup>
     <ItemGroup>
         <PackageReference Include="Antlr" Version="3.5.0.2" />
-        <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+        <PackageReference Include="Newtonsoft.Json" Version="13.0.4" />
     </ItemGroup>
     <ItemGroup>
         <Compile Include="..\SharedAssemblyInfo.cs" Link="Properties\SharedAssemblyInfo.cs" />
