--- a/AjaxControlToolkit/AjaxControlToolkit.csproj
+++ b/AjaxControlToolkit/AjaxControlToolkit.csproj
@@ -3,11 +3,11 @@
         <ProjectGuid>{676B3449-93F7-4102-8DF0-FB51911675D6}</ProjectGuid>
         <SignAssembly>True</SignAssembly>
         <AssemblyOriginatorKeyFile>..\AjaxKey.snk</AssemblyOriginatorKeyFile>
-        <TargetFrameworks>net48;net8.0</TargetFrameworks>
+        <TargetFrameworks>net48;net8.0;net10.0</TargetFrameworks>
         <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
         <DocumentationFile>..\bin\$(Configuration)\AjaxControlToolkit.XML</DocumentationFile>
         <GlobalOutputPath>..\bin\$(Configuration)\</GlobalOutputPath>
-        <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
+        <AppendTargetFrameworkToOutputPath>true</AppendTargetFrameworkToOutputPath>
         <AppendRuntimeIdentifierToOutputPath>false</AppendRuntimeIdentifierToOutputPath>
         <NoWarn>1591</NoWarn>
         <RestoreSources>$(RestoreSources);../../../nupkg;https://api.nuget.org/v3/index.json</RestoreSources>
@@ -37,9 +37,9 @@
         <PackageReadmeFile>README.md</PackageReadmeFile>
         <RepositoryUrl>https://github.com/webformsforcore/WebFormsForCore.AjaxControlToolkit</RepositoryUrl>
         <RepositoryType>git</RepositoryType>
-        <PackageTags>WebForms;porting WebForms;NET Core;NET 8</PackageTags>
-        <AssemblyVersion>8.0.13.0</AssemblyVersion>
-        <FileVersion>8.0.13.0</FileVersion>
+        <PackageTags>WebForms;porting WebForms;NET Core;NET 10</PackageTags>
+        <AssemblyVersion>10.0.13.0</AssemblyVersion>
+        <FileVersion>10.0.13.0</FileVersion>
         <PackageLicenseExpression>MIT</PackageLicenseExpression>
         <IncludeSymbols>true</IncludeSymbols>
         <PublishRepositoryUrl>true</PublishRepositoryUrl>
@@ -71,10 +71,15 @@
         <!--<PackageReference Include="EstrellasDeEsperanza.WebFormsForCore.Web" Version="1.3.17" />
         <PackageReference Include="EstrellasDeEsperanza.WebFormsForCore.Web.Extensions" Version="1.3.17" />-->
         <PackageReference Include="EstrellasDeEsperanza.WebFormsForCore.Configuration" Version="1.3.17" />
-        <PackageReference Include="System.Drawing.Common" Version="8.0.20" Aliases="Legacy" />
         <!--<ProjectReference Include="..\..\WebFormsForCore.Configuration\WebFormsForCore.Configuration.csproj" />-->
         <ProjectReference Include="..\..\WebFormsForCore.Web.Extensions\WebFormsForCore.Web.Extensions.csproj" />
         <ProjectReference Include="..\..\WebFormsForCore.Web\WebFormsForCore.Web.csproj" />
+    </ItemGroup>
+    <ItemGroup Condition="$(TargetFramework) == 'net8.0'">
+        <PackageReference Include="System.Drawing.Common" Version="8.0.20" Aliases="Legacy" />
+    </ItemGroup>
+    <ItemGroup Condition="$(TargetFramework) == 'net10.0'">
+        <PackageReference Include="System.Drawing.Common" Version="10.0.0" Aliases="Legacy" />
     </ItemGroup>
     <PropertyGroup Condition="$(TargetFramework) != 'net48'">
         <OutputPath>..\bin\$(Configuration)\$(TargetFramework)</OutputPath>
